test/extension_test_cases/valid/switch/switchWithDefault.wacc
begin
  int i = 0;
  case i
  when 1:
    println "not here"
    end
  else:
    println "here"
    end
  fi
end
