test/extension_test_cases/invalid/switch/switchWrongType.wacc
begin
  int i = 0;
  case i
  when true:
    skip
    end
  when false:
    skip
    end
  fi
end
